@@ -1,5 +1,10 @@
 2007-12-10  Neal H. Walfield  <neal@gnu.org>
 
+	* stddef.h [! DEBUG_ELIDE]: Include <l4/thread.h>.
+	[! DEBUG_ELIDE] (debug): Also print the caller's thread id.
+	
+2007-12-10  Neal H. Walfield  <neal@gnu.org>
+
 	* mutex.h (ss_mutex_trylock): Don't assert that the owner is not
 	the caller.
 	
